2015-04-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Add info about building in non-standard locations.

2015-03-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Indicate that the select extension is in beta and requires
	use of the gawk master branch.

2014-11-19         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* dirloop.sh: Minor tweaks.

2014-11-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Development: Fix script examples to find built gawkextlib properly.

2014-11-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* build.sh, check.sh, build_all.sh, check_all.sh, dirloop.sh: New
	scripts.
	* Development: Add descriptions of new scripts.

2014-11-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Add note recommending a single top-level ChangeLog for
	each extension.

2014-11-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Fix typo.

2014-11-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Minor changes.

2014-10-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Add a note about documentation.

2014-10-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>
	
	Restructure with each package in a separate directory.