@@ -1,3 +1,10 @@
+2015-05-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* make_extension_directory.sh: Add new script to set up a new
+	extension.
+	* Development: Add a comment about the new make_extension_directory.sh
+	script.
+
 2015-04-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* README: Add info about building in non-standard locations.
